--- a/package.json
+++ b/package.json
@@ -14,18 +14,16 @@
     "xmldoc": "^0.4.0"
   },
   "devDependencies": {
-    "babel": "^5.8.23",
-    "babel-cli": "^6.2.0",
-    "babel-preset-es2015": "^6.1.18",
-    "babel-preset-react": "^6.1.18",
-    "browserify-handbook": "^1.8.0",
+    "babel-cli": "^6.7.5",
+    "babel-preset-es2015": "^6.6.0",
     "babelify": "^7.2.0",
+    "browserify-handbook": "^1.8.0",
+    "chai": "^3.3.0",
     "grunt": "^0.4.5",
     "grunt-browserify": "^5.0.0",
     "grunt-contrib-watch": "^1.0.0",
-    "mocha": "^2.3.3",
-    "chai": "^3.3.0",
-    "istanbul": "^0.3.22"
+    "istanbul": "^0.3.22",
+    "mocha": "^2.3.3"
   },
   "scripts": {
     "test": "mocha"
