--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "browserify-handbook": "^1.8.0",
     "chai": "^3.3.0",
     "grunt": "^0.4.5",
+    "grunt-babel": "^6.0.0",
     "grunt-browserify": "^5.0.0",
     "grunt-contrib-watch": "^1.0.0",
     "istanbul": "^0.3.22",
