--- a/bower.json
+++ b/bower.json
@@ -1,23 +1,51 @@
 {
-  "name": "ucum",
+  "name": "ucum-lhc",
   "description": "Implements Unified Code for Units of Measure functions as javascript library",
   "version": "0.1",
-  "main": [
-    "source/config.js",
-    "source/dimension.js",
-    "source/functions.js",
-    "source/prefix.js",
-    "source/unit.js",
-    "source/unitsInput.js",
-    "source/unitTables.js"
-  ],
+  "main": "dist/module.js",
   "ignore": [
+    "config",
     "coverage",
     "cshrc.ucum",
+    "datastuff",
+    "demo",
+    "dist/es5",
+    "Gruntfile.js",
     "javaSource",
     "libs",
-    "License*",
+    "LicenseCer*",
     "nbproject",
+    "npm-shrinkwrap.json",
+    "package.json",
+    "source",
     "stuff",
-    "test"]
+    "test"],
+  "dependencies": {
+    "csv": "^1.1.0",
+    "csv-parse": "^1.1.7",
+    "csv-stringify": "^1.0.4",
+    "fs": "0.0.2",
+    "is-integer": "^1.0.6",
+    "jsonfile": "^2.2.3",
+    "path": "^0.12.7",
+    "stream": "0.0.2",
+    "stream-transform": "^0.1.1",
+    "string-to-stream": "^1.1.0",
+    "xmldoc": "^0.4.0"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.7.5",
+    "babel-preset-es2015": "^6.6.0",
+    "babelify": "^7.2.0",
+    "browserify-fs": "^1.0.0",
+    "browserify-handbook": "^1.8.0",
+    "chai": "^3.3.0",
+    "grunt": "^1.0.1",
+    "grunt-babel": "^6.0.0",
+    "grunt-browserify": "^5.0.0",
+    "grunt-cli": "^1.2.0",
+    "grunt-contrib-watch": "^1.0.0",
+    "istanbul": "^0.3.22",
+    "mocha": "^2.3.3"
+  }
 }
