--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,1 @@
-.idea
-LicenseCertificate*
-nbproject
-node_modules
-javaSource
-coverage
-rectangle.js
-*-compiled.js.map
-*-compiled.js
-js/
-*.zip
-autocomplete*
-.babelrc
-.gitignore
-stuff/
-dist/es5
+# Created by .ignore support plugin (hsz.mobi)
