--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "test"
   },
   "dependencies": {
+    "bower": "^1.7.9",
     "csv": "^1.1.0",
     "csv-parse": "^1.1.7",
     "csv-stringify": "^1.0.4",
@@ -23,6 +24,7 @@
     "babel-cli": "^6.7.5",
     "babel-preset-es2015": "^6.6.0",
     "babelify": "^7.2.0",
+    "bower": "^1.7.9",
     "browserify-fs": "^1.0.0",
     "browserify-handbook": "^1.8.0",
     "chai": "^3.3.0",
