--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "babel-cli": "^6.7.5",
     "babel-preset-es2015": "^6.6.0",
     "babelify": "^7.2.0",
+    "bower": "^1.7.9",
     "browserify-fs": "^1.0.0",
     "browserify-handbook": "^1.8.0",
     "chai": "^3.3.0",
