--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "test"
   },
   "dependencies": {
+    "bootstrap": "^3.3.7",
     "bower": "^1.7.9",
     "csv": "^1.1.0",
     "csv-parse": "^1.1.7",
