--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "is-integer": "^1.0.6",
     "jsonfile": "^2.2.3",
     "path": "^0.12.7",
+    "sanitize-html": "^1.13.0",
     "stream": "0.0.2",
     "stream-transform": "^0.1.1",
     "string-to-stream": "^1.1.0",
