--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ucum",
-  "version": "0.1.0",
+  "version": "0.1.1git ",
   "description": "Implements Unified Code for Units of Measure (UCUM) functions in a javascript library",
   "main": "dist/ucum-lhc.js",
   "directories": {
