--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "istanbul": "^0.3.22",
     "jit-grunt": "^0.10.0",
     "mocha": "https://registry.npmjs.org/mocha/-/mocha-2.5.3.tgz",
+    "nsp": "^2.8.1",
     "serve-index": "^1.8.0",
     "serve-static": "^1.12.2",
     "time-grunt": "^1.4.0"
