--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "directories": {
     "test": "test"
   },
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
     "bootstrap": "^3.3.7",
     "csv": "^1.1.0",
