--- a/package.json
+++ b/package.json
@@ -6,21 +6,6 @@
   "directories": {
     "test": "test"
   },
-  "dependencies": {
-    "bootstrap": "^3.3.7",
-    "csv": "^1.1.0",
-    "csv-parse": "^1.1.7",
-    "csv-stringify": "^1.0.4",
-    "diff": "^3.2.0",
-    "is-integer": "^1.0.6",
-    "jsonfile": "^2.2.3",
-    "path": "^0.12.7",
-    "sanitize-html": "^1.13.0",
-    "stream": "0.0.2",
-    "stream-transform": "^0.1.1",
-    "string-to-stream": "^1.1.0",
-    "xmldoc": "^0.4.0"
-  },
   "devDependencies": {
     "babel-cli": "^6.7.5",
     "babel-preset-es2015": "^6.6.0",
@@ -48,7 +33,20 @@
     "serve-index": "^1.8.0",
     "serve-static": "^1.12.2",
     "ssi": "^0.3.0",
-    "time-grunt": "^1.4.0"
+    "time-grunt": "^1.4.0",
+    "bootstrap": "^3.3.7",
+    "csv": "^1.1.0",
+    "csv-parse": "^1.1.7",
+    "csv-stringify": "^1.0.4",
+    "diff": "^3.2.0",
+    "is-integer": "^1.0.6",
+    "jsonfile": "^2.2.3",
+    "path": "^0.12.7",
+    "sanitize-html": "^1.13.0",
+    "stream": "0.0.2",
+    "stream-transform": "^0.1.1",
+    "string-to-stream": "^1.1.0",
+    "xmldoc": "^0.4.0"
   },
   "scripts": {
     "test": "mocha"
