point main to non-minified

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@lhncbc/ucum-lhc",
   "version": "2.1.5",
   "description": "Implements Unified Code for Units of Measure (UCUM) functions in a javascript library",
-  "main": "dist/ucum-lhc.min.js",
+  "main": "dist/ucum-lhc.js",
   "homepage" : "https://lhncbc.github.io/ucum-lhc/",
   "directories": {
     "test": "test"
