updates to bower.json for installation

--- a/bower.json
+++ b/bower.json
@@ -10,27 +10,35 @@
   },
   "authors": ["Lee Mericle", "Paul Lynch"],
   "ignore": [
+    "app.js",
     "config",
     "coverage",
     "cshrc.ucum",
+    "data",
     "datastuff",
     "demo/",
     "demo-dist/",
     "demo-es5/",
     "demo-test/",
     "demo.html",
-    "dist/es5",
-    "dist/assets",
-    "dist/stylesheets",
+    "dist/data",
     "Gruntfile.js",
+    "impexp",
     "index.html",
     "javaSource",
     "libs",
+    "*LicenseCertif*",
+    "*OLD",
     "nbproject",
+    "node_modules",
     "npm-shrinkwrap.json",
     "package.json",
     "source",
+    "source-es5",
     "stuff",
-    "stylesheets"
+    "stylesheets",
+    "test",
+    "test-es5",
+    "*.txt"
   ]
 }
