--- a/bower.json
+++ b/bower.json
@@ -8,7 +8,7 @@
     "type": "git",
     "url": "https://github.com/lhncbc/ucum-lhc"
   },
-  "authors": ["Lee Mericle", "Paul Lynch"],
+  "authors": ["Paul Lynch"],
   "devDependencies": {
     "babel-cli": "^6.7.5",
     "babel-preset-es2015": "^6.6.0",
