Changes from code review

--- a/bower.json
+++ b/bower.json
@@ -8,79 +8,19 @@
     "type": "git",
     "url": "https://github.com/lhncbc/ucum-lhc"
   },
-  "authors": ["Paul Lynch"],
-  "devDependencies": {
-    "babel-cli": "^6.7.5",
-    "babel-preset-es2015": "^6.6.0",
-    "babelify": "^7.2.0",
-    "bootstrap": "^3.3.7",
-    "bower": "^1.7.9",
-    "browserify-fs": "^1.0.0",
-    "browserify-handbook": "^1.8.0",
-    "chai": "^3.3.0",
-    "connect": "^3.6.1",
-    "csv": "^1.1.0",
-    "csv-parse": "^1.1.7",
-    "csv-stringify": "^1.0.4",
-    "diff": "^3.2.0",
-    "escape-html": "https://registry.npmjs.org/escape-html/-/escape-html-1.0.3.tgz",
-    "grunt": "^1.0.1",
-    "grunt-babel": "^6.0.0",
-    "grunt-browserify": "^5.0.0",
-    "grunt-cli": "^1.2.0",
-    "grunt-contrib-clean": "^1.0.0",
-    "grunt-contrib-cssmin": "^1.0.2",
-    "grunt-contrib-uglify": "^2.0.0",
-    "grunt-contrib-watch": "^1.0.0",
-    "grunt-mocha-test": "^0.13.2",
-    "grunt-nsp": "^2.3.1",
-    "grunt-wiredep": "^3.0.1",
-    "is-integer": "^1.0.6",
-    "istanbul": "^0.3.22",
-    "jit-grunt": "^0.10.0",
-    "jsonfile": "^2.2.3",
-    "mocha": "https://registry.npmjs.org/mocha/-/mocha-2.5.3.tgz",
-    "nsp": "^2.8.1",
-    "path": "^0.12.7",
-    "serve-index": "^1.8.0",
-    "serve-static": "^1.12.2",
-    "ssi": "^0.3.0",
-    "stream": "0.0.2",
-    "stream-transform": "^0.1.1",
-    "string-to-stream": "^1.1.0",
-    "time-grunt": "^1.4.0",
-    "xmldoc": "^0.4.0"
-  },
   "ignore": [
-    "app.js",
-    "config",
-    "coverage",
+    "demo-dist/",
+    "demo/",
+    "dist/data",
+    "impexp/",
+    "source/",
+    "test/",
+    "Gruntfile.js",
     "cshrc.ucum",
     "data",
-    "datastuff",
-    "demo/",
-    "demo-dist/",
-    "demo-es5/",
-    "demo-test/",
     "demo.html",
-    "dist/data",
-    "Gruntfile.js",
-    "impexp",
     "index.html",
-    "javaSource",
-    "libs",
-    "*LicenseCertif*",
-    "*OLD",
-    "nbproject",
-    "node_modules",
-    "npm-shrinkwrap.json",
-    "package.json",
-    "source",
-    "source-es5",
-    "stuff",
-    "stylesheets",
-    "test",
-    "test-es5",
-    "*.txt"
+    "npm-shrinkwrap",
+    "package.json"
   ]
 }
