--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "directories": {
     "test": "test"
   },
-  "files": ["dist/ucum-lhc.js", "dist/ucum-lhc.min.js"],
+  "files": ["dist/ucum-lhc.js", "dist/ucum-lhc.min.js",
+            "test/testModule.spec.js"],
   "devDependencies": {
     "babel-cli": "^6.7.5",
     "babel-preset-es2015": "^6.6.0",
