updates to third party packages

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lhncbc/ucum-lhc",
-  "version": "2.1.8",
+  "version": "2.1.9",
   "description": "Implements Unified Code for Units of Measure (UCUM) functions in a javascript library",
   "main": "dist/ucum-lhc.js",
   "homepage" : "https://lhncbc.github.io/ucum-lhc/",
@@ -14,14 +14,11 @@
     "babelify": "^7.2.0",
     "bootstrap": "^3.3.7",
     "bower": "^1.7.9",
+    "browserify": "^16.1.1",
     "browserify-fs": "^1.0.0",
-    "browserify-handbook": "^1.8.0",
-    "chai": "^3.3.0",
-    "connect": "^3.6.1",
     "csv": "^1.1.0",
     "csv-parse": "^1.1.7",
     "csv-stringify": "^1.0.4",
-    "diff": "^3.2.0",
     "escape-html": "https://registry.npmjs.org/escape-html/-/escape-html-1.0.3.tgz",
     "grunt": "^1.0.1",
     "grunt-babel": "^6.0.0",
@@ -35,7 +32,6 @@
     "grunt-nsp": "^2.3.1",
     "grunt-wiredep": "^3.0.1",
     "is-integer": "^1.0.6",
-    "istanbul": "^0.3.22",
     "jit-grunt": "^0.10.0",
     "jsonfile": "^2.2.3",
     "mocha": "https://registry.npmjs.org/mocha/-/mocha-2.5.3.tgz",
