--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
   "name": "@lhncbc/ucum-lhc",
-  "version": "2.1.10",
+  "version": "2.3.2",
   "description": "Implements Unified Code for Units of Measure (UCUM) functions in a javascript library",
   "main": "dist/ucum-lhc.js",
-  "homepage" : "https://lhncbc.github.io/ucum-lhc/",
+  "homepage": "https://lhncbc.github.io/ucum-lhc/",
   "directories": {
     "test": "test"
   },
-  "files": ["dist/ucum-lhc.js", "dist/ucum-lhc.min.js",
-            "test/testModule.spec.js"],
+  "files": [
+    "dist/ucum-lhc.js",
+    "dist/ucum-lhc.min.js",
+    "test/testModule.spec.js"
+  ],
   "devDependencies": {
     "babel-cli": "^6.7.5",
     "babel-preset-es2015": "^6.6.0",
@@ -21,10 +24,10 @@
     "csv-parse": "^1.1.7",
     "csv-stringify": "^1.0.4",
     "escape-html": "https://registry.npmjs.org/escape-html/-/escape-html-1.0.3.tgz",
-    "grunt": "^1.0.1",
+    "grunt": "https://registry.npmjs.org/grunt/-/grunt-0.4.5.tgz",
     "grunt-babel": "^6.0.0",
     "grunt-browserify": "^5.0.0",
-    "grunt-cli": "^1.2.0",
+    "grunt-cli": "https://registry.npmjs.org/grunt-cli/-/grunt-cli-1.2.0.tgz",
     "grunt-contrib-clean": "^1.0.0",
     "grunt-contrib-cssmin": "^1.0.2",
     "grunt-contrib-uglify": "^2.0.0",
