--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
   "name": "@lhncbc/ucum-lhc",
-  "version": "2.1.11",
+  "version": "2.3.3",
   "description": "Implements Unified Code for Units of Measure (UCUM) functions in a javascript library",
   "main": "dist/ucum-lhc.js",
-  "homepage" : "https://lhncbc.github.io/ucum-lhc/",
+  "homepage": "https://lhncbc.github.io/ucum-lhc/",
   "directories": {
     "test": "test"
   },
-  "files": ["dist/ucum-lhc.js", "dist/ucum-lhc.min.js",
-            "test/testModule.spec.js"],
+  "files": [
+    "dist/ucum-lhc.js",
+    "dist/ucum-lhc.min.js",
+    "test/testModule.spec.js"
+  ],
   "devDependencies": {
     "babel-cli": "^6.7.5",
     "babel-preset-es2015": "^6.6.0",
@@ -17,6 +20,7 @@
     "bower": "^1.7.9",
     "browserify": "^16.1.1",
     "browserify-fs": "^1.0.0",
+    "connect": "^3.6.6",
     "csv": "^1.1.0",
     "csv-parse": "^1.1.7",
     "csv-stringify": "^1.0.4",
