--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
   "version": "2.3.3",
   "description": "Implements Unified Code for Units of Measure (UCUM) functions in a javascript library",
   "main": "dist/ucum-lhc.js",
-  "homepage" : "https://lhncbc.github.io/ucum-lhc/",
+  "homepage": "https://lhncbc.github.io/ucum-lhc/",
   "directories": {
     "test": "test"
   },
-  "files": ["dist/ucum-lhc.js", "dist/ucum-lhc.min.js",
-            "test/testModule.spec.js"],
+  "files": [
+    "dist/ucum-lhc.js",
+    "dist/ucum-lhc.min.js",
+    "test/testModule.spec.js"
+  ],
   "devDependencies": {
     "babel-cli": "^6.7.5",
     "babel-preset-es2015": "^6.6.0",
@@ -38,6 +41,7 @@
     "mocha": "https://registry.npmjs.org/mocha/-/mocha-2.5.3.tgz",
     "nsp": "^2.8.1",
     "path": "^0.12.7",
+    "protractor": "^5.3.1",
     "serve-index": "^1.8.0",
     "serve-static": "^1.12.2",
     "ssi": "^0.3.0",
@@ -45,6 +49,7 @@
     "stream-transform": "^0.1.1",
     "string-to-stream": "^1.1.0",
     "time-grunt": "^1.4.0",
+    "webdriver-manager": "^12.0.6",
     "xmldoc": "^0.4.0"
   },
   "scripts": {
