--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "bower": "^1.7.9",
     "browserify": "^16.1.1",
     "browserify-fs": "^1.0.0",
+    "connect": "^3.6.6",
     "csv": "^1.1.0",
     "csv-parse": "^1.1.7",
     "csv-stringify": "^1.0.4",
