--- a/package.json
+++ b/package.json
@@ -24,11 +24,11 @@
     "csv": "^1.1.0",
     "csv-parse": "^1.1.7",
     "csv-stringify": "^1.0.4",
-    "escape-html": "https://registry.npmjs.org/escape-html/-/escape-html-1.0.3.tgz",
-    "grunt": "https://registry.npmjs.org/grunt/-/grunt-0.4.5.tgz",
+    "escape-html": "^1.0.3",
+    "grunt": "^0.4.5",
     "grunt-babel": "^6.0.0",
     "grunt-browserify": "^5.0.0",
-    "grunt-cli": "https://registry.npmjs.org/grunt-cli/-/grunt-cli-1.2.0.tgz",
+    "grunt-cli": "^1.2.0",
     "grunt-contrib-clean": "^1.0.0",
     "grunt-contrib-cssmin": "^1.0.2",
     "grunt-contrib-uglify": "^2.0.0",
@@ -39,7 +39,7 @@
     "is-integer": "^1.0.6",
     "jit-grunt": "^0.10.0",
     "jsonfile": "^2.2.3",
-    "mocha": "https://registry.npmjs.org/mocha/-/mocha-2.5.3.tgz",
+    "mocha": "^2.5.3",
     "nsp": "^2.8.1",
     "path": "^0.12.7",
     "protractor": "^5.3.1",
