--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "grunt-contrib-watch": "^1.0.0",
     "grunt-mocha-test": "^0.13.2",
     "grunt-nsp": "^2.3.1",
+    "grunt-protractor-runner": "^5.0.0",
     "grunt-wiredep": "^3.0.1",
     "is-integer": "^1.0.6",
     "jit-grunt": "^0.10.0",
