--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lhncbc/ucum-lhc",
-  "version": "2.3.4",
+  "version": "2.4.1",
   "description": "Implements Unified Code for Units of Measure (UCUM) functions in a javascript library",
   "main": "dist/ucum-lhc.js",
   "homepage": "https://lhncbc.github.io/ucum-lhc/",
@@ -16,10 +16,10 @@
     "babel-cli": "^6.7.5",
     "babel-preset-es2015": "^6.6.0",
     "babelify": "^7.2.0",
-    "bootstrap": "^3.3.7",
+    "bootstrap": "^4.1.3",
     "bower": "^1.7.9",
     "browserify": "^16.1.1",
-    "browserify-fs": "^1.0.0",
+    "browserify-fs": "https://github.com/eight04/browserify-fs#eb6645531326de3",
     "connect": "^3.6.6",
     "csv": "^1.1.0",
     "csv-parse": "^1.1.7",
@@ -42,6 +42,7 @@
     "mocha": "^5.2.0",
     "path": "^0.12.7",
     "protractor": "^5.3.1",
+    "semver": "^5.5.1",
     "serve-index": "^1.8.0",
     "serve-static": "^1.12.2",
     "ssi": "^0.3.0",
