--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lhncbc/ucum-lhc",
-  "version": "2.4.3",
+  "version": "2.5.0",
   "description": "Implements Unified Code for Units of Measure (UCUM) functions in a javascript library",
   "main": "dist/ucum-lhc.js",
   "homepage": "https://lhncbc.github.io/ucum-lhc/",
@@ -18,13 +18,14 @@
     "babelify": "^7.2.0",
     "bootstrap": "^4.1.3",
     "bower": "^1.7.9",
-    "browserify": "^16.1.1",
+    "browserify": "^16.2.3",
     "browserify-fs": "https://github.com/eight04/browserify-fs#eb6645531326de3",
     "connect": "^3.6.6",
     "csv": "^1.1.0",
     "csv-parse": "^1.1.7",
     "csv-stringify": "^1.0.4",
     "escape-html": "^1.0.3",
+    "fs": "0.0.1-security",
     "growl": "^1.10.5",
     "grunt": "^1.0.3",
     "grunt-babel": "^6.0.0",
@@ -36,6 +37,7 @@
     "grunt-contrib-watch": "^1.0.0",
     "grunt-mocha-test": "^0.13.2",
     "grunt-protractor-runner": "^5.0.0",
+    "grunt-webpack": "^3.1.3",
     "grunt-wiredep": "^3.0.1",
     "is-integer": "^1.0.6",
     "jit-grunt": "^0.10.0",
@@ -52,6 +54,8 @@
     "string-to-stream": "^1.1.0",
     "time-grunt": "^1.4.0",
     "webdriver-manager": "^12.0.6",
+    "webpack": "^4.26.1",
+    "webpack-cli": "^3.1.2",
     "xmldoc": "^0.4.0"
   },
   "scripts": {
