--- a/package.json
+++ b/package.json
@@ -2,14 +2,12 @@
   "name": "@lhncbc/ucum-lhc",
   "version": "2.5.0",
   "description": "Implements Unified Code for Units of Measure (UCUM) functions in a javascript library",
-  "main": "dist/ucum-lhc.js",
+  "main": "source-es5/ucumPkg.js",
   "homepage": "https://lhncbc.github.io/ucum-lhc/",
   "directories": {
     "test": "test"
   },
   "files": [
-    "dist/ucum-lhc.js",
-    "dist/ucum-lhc.min.js",
     "test/testModule.spec.js"
   ],
   "devDependencies": {
@@ -37,7 +35,6 @@
     "grunt-contrib-watch": "^1.0.0",
     "grunt-mocha-test": "^0.13.2",
     "grunt-protractor-runner": "^5.0.0",
-    "grunt-webpack": "^3.1.3",
     "grunt-wiredep": "^3.0.1",
     "is-integer": "^1.0.6",
     "jit-grunt": "^0.10.0",
@@ -54,8 +51,6 @@
     "string-to-stream": "^1.1.0",
     "time-grunt": "^1.4.0",
     "webdriver-manager": "^12.0.6",
-    "webpack": "^4.26.1",
-    "webpack-cli": "^3.1.2",
     "xmldoc": "^0.4.0"
   },
   "scripts": {
