--- a/package.json
+++ b/package.json
@@ -11,6 +11,22 @@
     "source-es5/*",
     "test/testModule.spec.js"
   ],
+  "dependencies" :
+  {
+    "connect": "^3.6.6",
+    "csv": "^1.1.0",
+    "csv-parse": "^1.1.7",
+    "csv-stringify": "^1.0.4",
+    "escape-html": "^1.0.3",
+    "fs": "0.0.1-security",
+    "growl": "^1.10.5",
+    "is-integer": "^1.0.6",
+    "jsonfile": "^2.2.3",
+    "stream": "0.0.2",
+    "stream-transform": "^0.1.1",
+    "string-to-stream": "^1.1.0",
+    "xmldoc": "^0.4.0"
+  },
   "devDependencies": {
     "babel-cli": "^6.7.5",
     "babel-preset-es2015": "^6.6.0",
@@ -19,13 +35,6 @@
     "bower": "^1.7.9",
     "browserify": "^16.2.3",
     "browserify-fs": "https://github.com/eight04/browserify-fs#eb6645531326de3",
-    "connect": "^3.6.6",
-    "csv": "^1.1.0",
-    "csv-parse": "^1.1.7",
-    "csv-stringify": "^1.0.4",
-    "escape-html": "^1.0.3",
-    "fs": "0.0.1-security",
-    "growl": "^1.10.5",
     "grunt": "^1.0.3",
     "grunt-babel": "^6.0.0",
     "grunt-browserify": "^5.0.0",
@@ -37,9 +46,7 @@
     "grunt-mocha-test": "^0.13.2",
     "grunt-protractor-runner": "^5.0.0",
     "grunt-wiredep": "^3.0.1",
-    "is-integer": "^1.0.6",
     "jit-grunt": "^0.10.0",
-    "jsonfile": "^2.2.3",
     "mocha": "^5.2.0",
     "path": "^0.12.7",
     "protractor": "^5.3.1",
@@ -47,12 +54,8 @@
     "serve-index": "^1.8.0",
     "serve-static": "^1.12.2",
     "ssi": "^0.3.0",
-    "stream": "0.0.2",
-    "stream-transform": "^0.1.1",
-    "string-to-stream": "^1.1.0",
     "time-grunt": "^1.4.0",
-    "webdriver-manager": "^12.0.6",
-    "xmldoc": "^0.4.0"
+    "webdriver-manager": "^12.0.6"
   },
   "scripts": {
     "test": "mocha"
