removed treacherous empty dependences line at end of package.json

--- a/package.json
+++ b/package.json
@@ -64,6 +64,5 @@
     "type": "git",
     "url": "https://github.com/lhncbc/ucum-lhc"
   },
-  "license": "SEE LICENSE IN LICENSE.md",
-  "dependencies": {}
+  "license": "SEE LICENSE IN LICENSE.md"
 }
