--- a/package.json
+++ b/package.json
@@ -12,15 +12,12 @@
     "data/ucumDefs.json",
     "test/testModule.spec.js"
   ],
-  "dependencies" :
-  {
-    "connect": "^3.6.6",
+  "dependencies": {
     "csv": "^1.1.0",
     "csv-parse": "^1.1.7",
     "csv-stringify": "^1.0.4",
     "escape-html": "^1.0.3",
     "fs": "0.0.1-security",
-    "growl": "^1.10.5",
     "is-integer": "^1.0.6",
     "jsonfile": "^2.2.3",
     "stream": "0.0.2",
@@ -33,9 +30,10 @@
     "babel-preset-es2015": "^6.6.0",
     "babelify": "^7.2.0",
     "bootstrap": "^4.1.3",
-    "bower": "^1.7.9",
+    "bower": "^1.8.8",
     "browserify": "^16.2.3",
     "browserify-fs": "https://github.com/eight04/browserify-fs#eb6645531326de3",
+    "connect": "^3.6.6",
     "grunt": "^1.0.3",
     "grunt-babel": "^6.0.0",
     "grunt-browserify": "^5.0.0",
