--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "test/testModule.spec.js"
   ],
   "dependencies": {
+    "braces": "^2.3.1",
     "csv": "^1.1.0",
     "csv-parse": "^1.1.7",
     "csv-stringify": "^1.0.4",
@@ -29,7 +30,7 @@
     "babel-cli": "^6.7.5",
     "babel-preset-es2015": "^6.6.0",
     "babelify": "^7.2.0",
-    "bootstrap": "^4.1.3",
+    "bootstrap": "^4.3.1",
     "bower": "^1.8.8",
     "browserify": "^16.2.3",
     "browserify-fs": "https://github.com/eight04/browserify-fs#eb6645531326de3",
@@ -39,7 +40,7 @@
     "grunt-browserify": "^5.0.0",
     "grunt-cli": "^1.2.0",
     "grunt-contrib-clean": "^1.0.0",
-    "grunt-contrib-cssmin": "^1.0.2",
+    "grunt-contrib-cssmin": "^3.0.0",
     "grunt-contrib-uglify": "^2.0.0",
     "grunt-contrib-watch": "^1.0.0",
     "grunt-mocha-test": "^0.13.2",
