--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "xmldoc": "^0.4.0"
   },
   "devDependencies": {
-    "babel-cli": "^6.7.5",
+    "@babel/cli": "^7.2.3",
+    "@babel/core": "^7.3.4",
     "babel-preset-es2015": "^6.6.0",
     "babelify": "^7.2.0",
     "bootstrap": "^4.3.1",
