--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   "devDependencies": {
     "@babel/cli": "^7.2.3",
     "@babel/core": "^7.3.4",
-    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-env": "^1.7.0",
     "babelify": "^7.2.0",
     "bootstrap": "^4.3.1",
     "bower": "^1.8.8",
