demo.html working after update of packages and reconfiguration of build

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@lhncbc/ucum-lhc",
   "version": "2.6.4",
   "description": "Implements Unified Code for Units of Measure (UCUM) functions in a javascript library",
-  "main": "source-es5/ucumPkg.js",
+  "main": "source/ucumPkg.js",
   "homepage": "https://lhncbc.github.io/ucum-lhc/",
   "directories": {
     "test": "test"
@@ -14,10 +14,11 @@
   ],
   "dependencies": {
     "braces": "^2.3.1",
-    "csv-parse": "^1.1.7",
+    "csv-parse": "^4.4.6",
     "csv-stringify": "^1.0.4",
     "escape-html": "^1.0.3",
     "fs": "0.0.1-security",
+    "grunt-extract-sourcemap": "^0.1.19",
     "is-integer": "^1.0.6",
     "jsonfile": "^2.2.3",
     "stream": "0.0.2",
@@ -28,15 +29,15 @@
   "devDependencies": {
     "@babel/cli": "^7.2.3",
     "@babel/core": "^7.3.4",
-    "babel-preset-env": "^1.7.0",
-    "babelify": "^7.2.0",
+    "@babel/preset-env": "^7.6.2",
+    "babelify": "^10.0.0",
     "bootstrap": "^4.3.1",
     "bower": "^1.8.8",
     "browserify": "^16.2.3",
     "browserify-fs": "https://github.com/eight04/browserify-fs#eb6645531326de3",
     "connect": "^3.6.6",
     "grunt": "^1.0.4",
-    "grunt-babel": "^6.0.0",
+    "grunt-babel": "^8.0.0",
     "grunt-browserify": "^5.0.0",
     "grunt-cli": "^1.2.0",
     "grunt-contrib-clean": "^1.0.0",
