--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@babel/cli": "^7.2.3",
     "@babel/core": "^7.3.4",
     "@babel/preset-env": "^7.6.2",
+    "@babel/register": "^7.6.2",
     "babelify": "^10.0.0",
     "bootstrap": "^4.3.1",
     "bower": "^1.8.8",
