--- a/bower.json
+++ b/bower.json
@@ -10,17 +10,19 @@
   },
   "ignore": [
     "demo-dist/",
+    "demo-test/",
     "demo/",
     "dist/data",
     "impexp/",
     "source/",
     "test/",
     "Gruntfile.js",
-    "cshrc.ucum",
+    "webpack.config.js",
+    "bashrc",
     "data",
     "demo.html",
     "index.html",
-    "npm-shrinkwrap",
-    "package.json"
+    "package.json",
+    "package-lock.json"
   ]
 }
