--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lhncbc/ucum-lhc",
-  "version": "4.0.0",
+  "version": "4.0.1",
   "description": "Implements Unified Code for Units of Measure (UCUM) functions in a javascript library",
   "main": "source-cjs/ucumPkg.js",
   "homepage": "https://lhncbc.github.io/ucum-lhc/",
@@ -10,7 +10,8 @@
   "files": [
     "browser-dist/ucum-lhc.js",
     "source-cjs/*",
-    "source/*"
+    "source/*",
+    "data/ucumDefs.json"
   ],
   "dependencies": {
     "braces": "^2.3.1",
