--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "4.1.2",
   "description": "Implements Unified Code for Units of Measure (UCUM) functions in a javascript library",
   "main": "source-cjs/ucumPkg.js",
+  "browser": "browser-dist/ucum-lhc.js",
   "homepage": "https://lhncbc.github.io/ucum-lhc/",
   "directories": {
     "test": "test"
