--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "babelify": "^10.0.0",
     "bootstrap": "^4.3.1",
     "browserify": "^16.2.3",
+    "coffeescript": "^2.6.1",
     "connect": "^3.6.6",
     "grunt": "^1.4.1",
     "grunt-babel": "^8.0.0",
