--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "data/ucumDefs.min.json"
   ],
   "dependencies": {
+    "coffeescript": "^2.7.0",
     "csv-parse": "^4.4.6",
     "csv-stringify": "^1.0.4",
     "escape-html": "^1.0.3",
@@ -35,7 +36,7 @@
     "bootstrap": "^4.3.1",
     "bower": "^1.8.8",
     "browserify": "^16.2.3",
-    "grunt": "^1.0.4",
+    "grunt": "^1.5.3",
     "grunt-babel": "^8.0.0",
     "grunt-browserify": "^5.0.0",
     "grunt-cli": "^1.2.0",
