--- a/package.json
+++ b/package.json
@@ -56,8 +56,8 @@
     "webpack-cli": "^3.3.9"
   },
   "scripts": {
-    "build": "grunt build && webpack",
-    "test": "grunt test"
+    "build": "source ./bashrc && grunt build && webpack",
+    "test": "source ./bashrc && grunt test"
   },
   "repository": {
     "type": "git",
