Added a sourcemap file to the browser-dist folder in the npm package, and replaced the non-minimized file in browser-dist with a minimized version.  Also fixed the sourcemap.

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "test"
   },
   "files": [
-    "browser-dist/ucum-lhc.js",
+    "browser-dist/ucum-lhc.min.*",
     "source-cjs/*",
     "source/*",
     "data/ucumDefs.min.json"
